add required for inputes

--- a/login_form.html
+++ b/login_form.html
@@ -16,10 +16,10 @@
             <!-- از کلاس هدر و مارجین استفاده کردم برای هرجایی ک لازم داشتم استفاده کنم -->
 <!-- از تگ لیبل برای برچسب های فیلد هام استفاده کردم و با فور به اینپوتم وصلش کردم ک روی برچسب کلیک میشه وارد اینپوت مربوطه بشه -->
                     <label class="margin" for="phone_input">موبایل : </label>
-                    <input class="margin" type="tel" id="phone_input" autofocus >
+                    <input class="margin" type="tel" id="phone_input" autofocus required>
                  
                     <label class="margin" for="pass_input">رمز عبور : </label>
-                    <input class="margin" type="password" id="pass_input">
+                    <input class="margin" type="password" id="pass_input" required>
                      <br>
                      <!-- تگ باتن استفاده کردم چون مخصوص دکمه است و بیشتر باهاش حال میکنم :D            -->
                     <button class="margin btn_green" >ورود</button>
