--- a/registery_form.html
+++ b/registery_form.html
@@ -16,13 +16,16 @@
 <!-- از کلاس هدر و مارجین استفاده کردم برای هرجایی ک لازم داشتم استفاده کنم -->
 <!-- از تگ لیبل برای برچسب های فیلد هام استفاده کردم و با فور به اینپوتم وصلش کردم ک روی برچسب کلیک میشه وارد اینپوت مربوطه بشه -->
                     <label class="margin" for="phone_input">موبایل : </label>
-                    <input class="margin" type="tel" id="phone_input" autofocus required>
+                    <input class="margin" type="tel" id="phone_input" autofocus required onchange="validatPhone(event)">
+                    <span class="alert-red">* فقط باید ارقام 0 تا 9  باشد و طول این فیلد 11 رقم باشد *</span>
                  
                     <label class="margin" for="pass_input1">رمز عبور : </label>
                     <input class="margin" type="password" id="pass_input1" required>
+                    <span class="alert-red">* طول رشته رمز عبور نباید کمتر از 8 کارکتر باشد *</span>
 
                     <label class="margin" for="pass_input2">تکرار رمز عبور :</label>
                     <input class="margin" type="password" id="pass_input2" required>
+                    <span class="alert-red">* مقدار تکرار رمز عبور تطابق ندارد *</span>
         <!-- تگ باتن استفاده کردم چون مخصوص دکمه است و بیشتر باهاش حال میکنم :D            -->
                     <br>
                     <button class="margin btn_green" >ثبت نام</button>
