--- a/registery_form.html
+++ b/registery_form.html
@@ -20,7 +20,7 @@
                     <span class="alert-red" style="display: none;">* فقط باید ارقام 0 تا 9  باشد و طول این فیلد 11 رقم باشد *</span>
                  
                     <label class="margin" for="pass_input1">رمز عبور : </label>
-                    <input class="margin" type="password" id="pass_input1" required>
+                    <input class="margin" type="password" id="pass_input1" required onchange="validatPass(event)">
                     <span class="alert-red" style="display: none;">* طول رشته رمز عبور نباید کمتر از 8 کارکتر باشد *</span>
 
                     <label class="margin" for="pass_input2">تکرار رمز عبور :</label>
