--- a/login_form.html
+++ b/login_form.html
@@ -16,7 +16,8 @@
             <!-- از کلاس هدر و مارجین استفاده کردم برای هرجایی ک لازم داشتم استفاده کنم -->
 <!-- از تگ لیبل برای برچسب های فیلد هام استفاده کردم و با فور به اینپوتم وصلش کردم ک روی برچسب کلیک میشه وارد اینپوت مربوطه بشه -->
                     <label class="margin" for="phone_input">موبایل : </label>
-                    <input class="margin" type="tel" id="phone_input" autofocus required>
+                    <input class="margin" type="tel" id="phone_input" autofocus required onchange="validatPhone(event)">
+                    <span class="alert-red" style="display: none;">* فقط باید ارقام 0 تا 9  باشد و طول این فیلد 11 رقم باشد *</span>
                  
                     <label class="margin" for="pass_input">رمز عبور : </label>
                     <input class="margin" type="password" id="pass_input" required>
