--- a/registery_form.html
+++ b/registery_form.html
@@ -16,15 +16,15 @@
 <!-- از کلاس هدر و مارجین استفاده کردم برای هرجایی ک لازم داشتم استفاده کنم -->
 <!-- از تگ لیبل برای برچسب های فیلد هام استفاده کردم و با فور به اینپوتم وصلش کردم ک روی برچسب کلیک میشه وارد اینپوت مربوطه بشه -->
                     <label class="margin" for="phone_input">موبایل : </label>
-                    <input class="margin" type="tel" id="phone_input" autofocus onkeyup="validatPhone(event)">
+                    <input class="margin" type="tel" id="phone_input" autofocus onkeyup="validatPhone(event)" placeholder="* * * * * * * * * 9 0">
                     <span class="alert-red" style="display: none;">* فقط باید ارقام 0 تا 9  باشد و طول این فیلد 11 رقم باشد *</span>
                  
                     <label class="margin" for="pass_input1">رمز عبور : </label>
-                    <input class="margin" type="password" id="pass_input1"  onkeyup="validatPass(event)">
+                    <input class="margin" type="password" id="pass_input1"  onkeyup="validatPass(event)" placeholder="* * * * * * * * * * ">
                     <span class="alert-red" style="display: none;">* طول رشته رمز عبور نباید کمتر از 8 کارکتر باشد *</span>
 
                     <label class="margin" for="pass_input2">تکرار رمز عبور :</label>
-                    <input class="margin" type="password" id="pass_input2"  onkeyup="validatRepeatPass()">
+                    <input class="margin" type="password" id="pass_input2"  onkeyup="validatRepeatPass()" placeholder="* * * * * * * * * * ">
                     <span class="alert-red" style="display: none;">* مقدار تکرار رمز عبور تطابق ندارد *</span>
         <!-- تگ باتن استفاده کردم چون مخصوص دکمه است و بیشتر باهاش حال میکنم :D            -->
                     <br>
