Bug fix and  & Update to version2

--- a/messenger.html
+++ b/messenger.html
@@ -11,6 +11,6 @@
     <h1>به نسخه تستی پیام رسان خوش امدید </h1>
 
 
-    <script src="./js/Messenger.js"></script>
+    <script src="./js/js_page.js"></script>
 </body>
 </html>
