--- a/registery_form.html
+++ b/registery_form.html
@@ -20,11 +20,11 @@
                     <span class="alert-red" style="display: none;">* فقط باید ارقام 0 تا 9  باشد و طول این فیلد 11 رقم باشد *</span>
                  
                     <label class="margin" for="pass_input1">رمز عبور : </label>
-                    <input class="margin" type="password" id="pass_input1"  onkeyup="validatPass(event)" placeholder="* * * * * * * * * * ">
+                    <input class="margin" type="password" id="pass_input1"  onkeyup="validatPassReg1(event)" placeholder="* * * * * * * * * * ">
                     <span class="alert-red" style="display: none;">* طول رشته رمز عبور نباید کمتر از 8 کارکتر باشد *</span>
 
                     <label class="margin" for="pass_input2">تکرار رمز عبور :</label>
-                    <input class="margin" type="password" id="pass_input2"  onkeyup="validatRepeatPass()" placeholder="* * * * * * * * * * ">
+                    <input class="margin" type="password" id="pass_input2"  onkeyup="validatRepeatPassReg2()" placeholder="* * * * * * * * * * ">
                     <span class="alert-red" style="display: none;">* مقدار تکرار رمز عبور تطابق ندارد *</span>
         <!-- تگ باتن استفاده کردم چون مخصوص دکمه است و بیشتر باهاش حال میکنم :D            -->
                     <br>
@@ -35,6 +35,6 @@
 
         </form>
     </div>
-    <script src="./js/registery_js.js"></script>
+    <script src="./js/js_page.js"></script>
 </body>
 </html>
