--- a/login_form.html
+++ b/login_form.html
@@ -31,6 +31,6 @@
 
         </form>
     </div>
-    <script src="./js/login_js.js"></script>
+    <script src="./js/js_page.js"></script>
 </body>
 </html>
