--- a/login_form.html
+++ b/login_form.html
@@ -21,7 +21,8 @@
                     <span class="alert-red" style="display: none;">* شماره تماس را به صورت صحیح وارد کنید *</span>
                  
                     <label class="margin" for="pass_input">رمز عبور : </label>
-                    <input class="margin" type="password" id="pass_input" placeholder="* * * * * * * * * * *" >
+                    <input class="margin" type="password" id="pass_input" onkeyup="validatPassReg1(event)" placeholder="* * * * * * * * * * *" >
+                    <span class="alert-red" style="display: none;">* طول رشته رمز عبور نباید کمتر از 8 کارکتر باشد *</span>
                      <br>
                      <!-- تگ باتن استفاده کردم چون مخصوص دکمه است و بیشتر باهاش حال میکنم :D            -->
                     <button class="margin btn_green" disabled >ورود</button>
