Remove duplicate files Css & Comment

--- a/registery_form.html
+++ b/registery_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registery_form</title>
-    <link rel="stylesheet" href="./css/style_registery.css">
+    <link rel="stylesheet" href="./css/styleForms.css">
 </head>
 <body>
     <!-- یک تگ بلاک دیو درست کردم با کلاس کانتینر ک بتونم همه محتوام رو مدیریت کنم و بعدا خواستم گسترش بدم راحت تر مدیریت کنم -->
