--- a/messenger.html
+++ b/messenger.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-    <h1>به نسخه تستی پیام رسان خوش امدید </h1>
-
+    <div>
+        <h1>به نسخه تستی پیام رسان خوش امدید </h1>
+    </div>
+    
 
     <script src="./js/js_page.js"></script>
 </body>
