Messenger page design

--- a/messenger.html
+++ b/messenger.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="./css/Messenger.css">
 </head>
 <body>
-
-    <div>
-        <h1>به نسخه تستی پیام رسان خوش امدید </h1>
+<h1>صفحه پیام رسانی:</h1>
+    <div class="container">
+        <div class="contact customItem">contact</div>
+        <div class="sideBar customItem">sideBar</div>
+        <div class="chatPage customItem">chatPage</div>
+        <div class="inputText customItem">inputText</div>
     </div>
-    
 
     <script src="./js/js_page.js"></script>
 </body>
