Comments for Messenger

--- a/messenger.html
+++ b/messenger.html
@@ -9,6 +9,7 @@
 <body>
 <h1>صفحه پیام رسانی:</h1>
     <div class="container">
+        <!-- از بلاک دیو استفاده کردم برای جداسازی المنت ها و بعدا داخلش بتونم محتوام رو بذارم  و به هرکدوم کلاس مربوط ب خودش رو دادم  -->
         <div class="contact customItem">contact</div>
         <div class="sideBar customItem">sideBar</div>
         <div class="chatPage customItem">chatPage</div>
