add file farawin.js

--- a/login_form.html
+++ b/login_form.html
@@ -10,7 +10,7 @@
   <!-- یک تگ بلاک دیو درست کردم با کلاس کانتینر ک بتونم همه محتوام رو مدیریت کنم و بعدا خواستم گسترش بدم راحت تر مدیریت کنم -->
     <div class="container" >
        <!-- از تگ فرم اچ تی ام ال استفاده کردم چون تگ معنا داره -->
-        <form class="form">
+        <form class="form" action="">
 <!-- از پاراگ راف برای عنوان استفاده کردم چون استایل های پیش فرضش مناسب بود و ساختار بلاک کد داره  -->
             <p class=" margin header">فرم ورود </p>
             <!-- از کلاس هدر و مارجین استفاده کردم برای هرجایی ک لازم داشتم استفاده کنم -->
@@ -33,5 +33,6 @@
         </form>
     </div>
     <script src="./js/js_page.js"></script>
+    <script src="./js/farawin.js"></script>
 </body>
 </html>
