--- a/registery_form.html
+++ b/registery_form.html
@@ -10,7 +10,7 @@
     <!-- یک تگ بلاک دیو درست کردم با کلاس کانتینر ک بتونم همه محتوام رو مدیریت کنم و بعدا خواستم گسترش بدم راحت تر مدیریت کنم -->
     <div class="container" >
         <!-- تگ دیو رو برای ساختار بلاک کدش انتخاب کردم ک بتونم ابعاد بهش بدم و در نهایت با دیسپلی فلکس بصورت ستونی بچه هاش رو منظمش کنم -->
-        <form class="form">
+        <form class="form" action="">
                  <!-- از تگ فرم اچ تی ام ال استفاده کردم چون تگ معنا داره -->
             <p class=" margin header">فرم ثبت نام </p>
 <!-- از کلاس هدر و مارجین استفاده کردم برای هرجایی ک لازم داشتم استفاده کنم -->
@@ -36,5 +36,6 @@
         </form>
     </div>
     <script src="./js/js_page.js"></script>
+    <script src="./js/farawin.js"></script>
 </body>
 </html>
