--- a/registery_form.html
+++ b/registery_form.html
@@ -28,7 +28,7 @@
                     <span class="alert-red" style="display: none;">* مقدار تکرار رمز عبور تطابق ندارد *</span>
         <!-- تگ باتن استفاده کردم چون مخصوص دکمه است و بیشتر باهاش حال میکنم :D            -->
                     <br>
-                    <button class="margin btn_green" disabled>ثبت نام</button>
+                    <button class="margin btn_green" onclick="validationBtn()" >ثبت نام</button>
                     <br>
                                         <!-- از تگ معنا دار لینک استفاده کردم برای اینکه ادرس صفحه ریجستری رو بهش بدم و استایل های پیش فرضش مناسب بود  -->
                     <a class="margin" href="./login_form.html">ورود</a>
