update css  green And White

--- a/login_form.html
+++ b/login_form.html
@@ -17,7 +17,7 @@
 <!-- از تگ لیبل برای برچسب های فیلد هام استفاده کردم و با فور به اینپوتم وصلش کردم ک روی برچسب کلیک میشه وارد اینپوت مربوطه بشه -->
                     <label class="margin" for="phone_input">موبایل : </label>
                     <!-- اینجا اتوفوکوس گذاشتم ک وقتی صفحه بارگذاری میشه اتوماتیک بره تو این فیلد فوکوس بشه و ایونتی ک گذاشتم برای اینکه موقعی ک کلیدی از کیبورد فشرده میشه بیاد بررسی کنه درست وارد شده یا خیر  -->
-                    <input class="margin" type="tel" id="phone_input" placeholder="* * * * * * * * * 9 0" autofocus onkeyup="validatPhone(event)">
+                    <input class="margin" type="tel" id="phone_input" placeholder="6 4 5 * * * * 3 3 9 0" autofocus onkeyup="validatPhone(event)">
                     <span class="alert-red" style="display: none;">* شماره تماس را به صورت صحیح وارد کنید *</span>
                  
                     <label class="margin" for="pass_input">رمز عبور : </label>
