add Img For Profile

--- a/registery_form.html
+++ b/registery_form.html
@@ -11,6 +11,7 @@
     <div class="container" >
         <!-- تگ دیو رو برای ساختار بلاک کدش انتخاب کردم ک بتونم ابعاد بهش بدم و در نهایت با دیسپلی فلکس بصورت ستونی بچه هاش رو منظمش کنم -->
         <form class="form" action="">
+            <div><img src="./img/hamedPro.jpg" alt="عکس پروفایل" style="width: 100px; height: 100px; border-radius: 100%; border: 2px solid rgba(255, 255, 255,0.8);"></div>
                  <!-- از تگ فرم اچ تی ام ال استفاده کردم چون تگ معنا داره -->
             <p class=" margin header">فرم ثبت نام </p>
 <!-- از کلاس هدر و مارجین استفاده کردم برای هرجایی ک لازم داشتم استفاده کنم -->
