--- a/login_form.html
+++ b/login_form.html
@@ -1,17 +1,26 @@
+<!-- از این تگ برای اطمینان حاصل کردن از سازگاری صحیح صفحه وب با مرورگرها استفاده میکنیم  -->
 <!DOCTYPE html>
+<!-- اینجا زبان صفحه رو فارسی و جهت صفحه رو راست به چپ قرار دادم  -->
 <html lang="fa" dir="rtl">
+  <!-- تگ هد یکی از تگ های اصلی در اچ تی ام ال است که برای تعیین تنظیمات مربوط به سرصفحه وب استفاده می شود  -->
 <head>
+  <!-- تگ متا چرست یوتی اف هشت یک استاندارد برای کد گذاری متن است و یو تی اف هشت برای صفحه وب تعیین می کند که تمام کاراکتر ها و نماد های مختلف در زبان های مختلف را شامل میشود و مطمئن میشویم ک متن صفحه به درستی نمایش داده می شود  -->
     <meta charset="UTF-8">
+    <!-- برای تعیین نحوه نمایش صفحه وب در اچ تی ام ال را در دستگاه های مختلف مورد استفاده قرار میگیرد. -->
+    <!-- و مقدار ویدس رو برابر با عرض صفحه دستگاه کاربر قرار میدهد -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- برای تعیین عنوان صفحه استفاده می‌شود. محتوای داخل این تگ، عنوان صفحه را مشخص می‌کند که در نوار عنوان مرورگر و در نتایج جستجو نمایش داده می‌شود.-->
     <title>login_form</title>
+    <!-- اینجا هم فایل سی اس اس رو با تگ لینک به صفحه اضافه کردم  -->
     <link rel="stylesheet" href="./css/styleForms.css">
 </head>
 <body>
   <!-- یک تگ بلاک دیو درست کردم با کلاس کانتینر ک بتونم همه محتوام رو مدیریت کنم و بعدا خواستم گسترش بدم راحت تر مدیریت کنم -->
     <div class="container" >
        <!-- از تگ فرم اچ تی ام ال استفاده کردم چون تگ معنا داره -->
-        <form class="form" action="">
-          <div><img src="./img/hamedPro.jpg" alt="عکس پروفایل" style="width: 100px; height: 100px; border-radius: 100%; border: 2px solid rgba(255, 255, 255,0.8);"></div>
+        <form class="form" action="./messenger.html">
+          <!-- اینجا رو برای داشتن لوگو خاص یا گرفتن عکس پروفایل در نظر گرفتم -->
+          <div><img src="./img/hamedPro.jpg" alt="عکس پروفایل" style="width: 100px; height: 100px; border-radius: 100%; border: 5px solid rgba(2, 59, 125, 0.2);"></div>
 <!-- از پاراگ راف برای عنوان استفاده کردم چون استایل های پیش فرضش مناسب بود و ساختار بلاک کد داره  -->
             <p class=" margin header">فرم ورود </p>
             <!-- از کلاس هدر و مارجین استفاده کردم برای هرجایی ک لازم داشتم استفاده کنم -->
@@ -30,9 +39,10 @@
                     <br>
                     <!-- از تگ معنا دار لینک استفاده کردم برای اینکه ادرس صفحه ریجستری رو بهش بدم و استایل های پیش فرضش مناسب بود  -->
                     <a class="margin" href="./registery_form.html">ثبت نام</a>
-
+    
         </form>
     </div>
+<!-- اینجا به اخر بادی کد های جاوا اسکریپتمو وصل کردم  -->
     <script src="./js/js_page.js"></script>
     <script src="./js/farawin.js"></script>
 </body>
