--- a/registery_form.html
+++ b/registery_form.html
@@ -10,8 +10,9 @@
     <!-- یک تگ بلاک دیو درست کردم با کلاس کانتینر ک بتونم همه محتوام رو مدیریت کنم و بعدا خواستم گسترش بدم راحت تر مدیریت کنم -->
     <div class="container" >
         <!-- تگ دیو رو برای ساختار بلاک کدش انتخاب کردم ک بتونم ابعاد بهش بدم و در نهایت با دیسپلی فلکس بصورت ستونی بچه هاش رو منظمش کنم -->
-        <form class="form" action="">
-            <div><img src="./img/hamedPro.jpg" alt="عکس پروفایل" style="width: 100px; height: 100px; border-radius: 100%; border: 2px solid rgba(255, 255, 255,0.8);"></div>
+        <form class="form" action="./login_form.html">      
+            <!-- اینجا رو برای داشتن لوگو خاص یا گرفتن عکس پروفایل در نظر گرفتم -->
+            <div><img src="./img/hamedPro.jpg" alt="عکس پروفایل" style="width: 100px; height: 100px; border-radius: 100%; border: 5px solid rgba(2, 59, 125, 0.2);"></div>
                  <!-- از تگ فرم اچ تی ام ال استفاده کردم چون تگ معنا داره -->
             <p class=" margin header">فرم ثبت نام </p>
 <!-- از کلاس هدر و مارجین استفاده کردم برای هرجایی ک لازم داشتم استفاده کنم -->
@@ -31,11 +32,12 @@
                     <br>
                     <button type="button" class="margin btn_blue" onclick="validationBtnRegestery()" >ثبت نام</button>
                     <br>
-                                        <!-- از تگ معنا دار لینک استفاده کردم برای اینکه ادرس صفحه ریجستری رو بهش بدم و استایل های پیش فرضش مناسب بود  -->
+<!-- از تگ معنا دار لینک استفاده کردم برای اینکه ادرس صفحه ریجستری رو بهش بدم و استایل های پیش فرضش مناسب بود  -->
                     <a class="margin" href="./login_form.html">ورود</a>
 
         </form>
     </div>
+    <!-- اینجا به اخر بادی کد های جاوا اسکریپتمو وصل کردم  -->
     <script src="./js/js_page.js"></script>
     <script src="./js/farawin.js"></script>
 </body>
